--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,16 +35,24 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.core:core-ktx:1.3.2'
+    //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.1.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
+    //Koin
     implementation 'org.koin:koin-android:2.0.1'
     implementation 'org.koin:koin-androidx-viewmodel:2.0.1'
+    //Okhttp
     implementation 'com.squareup.okhttp3:logging-interceptor:3.12.1'
-    kapt "com.android.databinding:compiler:3.1.4"
+    //Navigation
     implementation 'android.arch.navigation:navigation-fragment:1.0.0'
     implementation 'android.arch.navigation:navigation-ui:1.0.0'
+    //Picasso
     implementation 'com.squareup.picasso:picasso:2.5.2'
+    //ConstraitLayout
     implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
+    //Infinitescroll
     compile 'com.github.pwittchen:infinitescroll:0.0.3'
+    //Databinding
+    kapt "com.android.databinding:compiler:3.1.4"
 }
