--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
     defaultConfig {
-        applicationId "com.pickup.rsbyoqg0ny"
+        applicationId "com.tetomanta.mestonki"
         minSdkVersion 23
         targetSdkVersion 29
         versionCode 1
@@ -35,14 +35,9 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.core:core-ktx:1.3.2'
-    //Retrofit
-    implementation 'com.squareup.retrofit2:retrofit:2.1.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
     //Koin
     implementation 'org.koin:koin-android:2.0.1'
     implementation 'org.koin:koin-androidx-viewmodel:2.0.1'
-    //Okhttp
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.12.1'
     //Navigation
     implementation 'android.arch.navigation:navigation-fragment:1.0.0'
     implementation 'android.arch.navigation:navigation-ui:1.0.0'
@@ -52,7 +47,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
     //Infinitescroll
-    compile 'com.github.pwittchen:infinitescroll:0.0.3'
+    implementation 'com.github.danish-p:PaginationApp:0.1.0'
     //Databinding
     kapt "com.android.databinding:compiler:3.1.4"
 }
