--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,11 +6,13 @@ apply plugin: 'kotlin-android-extensions'
 
 apply plugin: 'kotlin-kapt'
 
+apply plugin: 'com.google.gms.google-services'
+
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
     defaultConfig {
-        applicationId "com.tetomanta.mestonki"
+        applicationId "com.mrt.firebasesample"
         minSdkVersion 23
         targetSdkVersion 29
         versionCode 1
@@ -46,4 +48,16 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
     //Databinding
     kapt "com.android.databinding:compiler:3.1.4"
+
+    //firebase
+    implementation('com.google.firebase:firebase-analytics:17.4.4')
+    implementation('com.google.firebase:firebase-firestore:21.4.0')
+    implementation 'com.google.firebase:firebase-auth:19.3.2'
+    implementation 'com.google.firebase:firebase-auth-ktx:19.3.2'
+    implementation 'com.google.firebase:firebase-analytics'
+
+    //glide
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    kapt 'com.github.bumptech.glide:compiler:4.11.0'
+
 }
